# virtual-class-sword

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  base.hpp  baseEval.hpp  baseNeg.hpp  baseNegEval.hpp  main.cpp  virtual_classes.hpp
